--- a/likeapp/dockerfile
+++ b/likeapp/dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Копируем файлы приложения в контейнер
-COPY requirements.txt /app/
+COPY ./requirements.txt /app/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
